frontend/k8s/staging/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gceme-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      env: staging
  template:
    metadata:
      labels:
        env: staging
    spec:
      containers:
      - name: frontend
        image: sample-app-frontend
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
